Fix CLS Async/Await

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "amqplib": "~0.5.2",
     "bcrypt": "~2.0.1",
     "camelcase": "~5.0.0",
+    "cls-hooked": "~4.2.2",
     "co-body": "~6.0.0",
-    "continuation-local-storage": "3.2",
     "deepmerge": "~2.1.1",
     "eureka-js-client": "~4.3.0",
     "is-my-json-valid": "~2.17",
